--- a/Reference2.bib
+++ b/Reference2.bib
@@ -10,7 +10,7 @@
 
 
 @article{RecessionHO,
-	Author = {Marc Suhrcke and David Stuckler},
+	Author = {Suhrcke, M. & Stuckler, D.},
 	Date-Added = {2014-10-09 16:07:47 +0000},
 	Date-Modified = {2014-10-09 16:14:05 +0000},
 	Journal = {Social Science & Medicine},
@@ -28,4 +28,16 @@
 	Title = {Health at a Glance 2013: OECD},
 	Url = {http://dx.doi.org/10.1787/health_glance-2013-en},
 	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1787/health_glance-2013-en}}
+	Bdsk-Url-1 = {http://dx.doi.org/10.1787/health_glance-2013-en}
+
+@article{Ataleofthree,
+	Author = {Kaplan, G.A.},
+	Date-Modified = {2014-16-09 12:58:18 +0000},
+	Keywords = {recession and health and outcome and empirical},
+	Journal = {Social Science & Medicine},
+	Number = {74},
+	Pages = {643 - 646},
+	Title = {Economic crisis: Some thoughts on why, when, and where they (might) matter for health - A tale of three countries},
+	Year = {2012}
+	
+	
