--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -1,22 +1,19 @@
 ---
 title: "Second Assignment - Proposal"
-author: "Pietro Romozzi and Federico Colombo-Ercole"
+author: "Pietro Romozzi and Federico Colombo"
 date: "9 October 2014"
 output:
-  pdf_document:
-    fig_caption: yes
-    number_sections: no
   html_document:
     fig_caption: yes
     number_sections: no
-bibliography:
-- Reference2.bib
-- Packages.bib
+  pdf_document:
+    fig_caption: yes
+    number_sections: no
 ---
 
 ```{r include=FALSE}
 # Set working directory.
-setwd("/Users/feffo-delpiero/Desktop/SecondAssignment")
+setwd("/Users/Peter/Desktop/Hertie/1st Semester//Collaborative Social Science Data Analysis//SecondAssignment")
 
 # Load packages and create BibTeX file
 RPackages <- c("ggplot2", "repmis")
@@ -36,5 +33,4 @@ Relevance
 Why is it interesting?
 
 
-## References 
-
+## References
