--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -3,12 +3,15 @@ title: "Second Assignment - Proposal"
 author: "Pietro Romozzi and Federico Colombo"
 date: "9 October 2014"
 output:
-  html_document:
-    fig_caption: yes
-    number_sections: no
   pdf_document:
     fig_caption: yes
     number_sections: no
+  html_document:
+    fig_caption: yes
+    number_sections: no
+bibliography:
+- Reference2.bib
+- Packages.bib
 ---
 
 ```{r include=FALSE}
@@ -28,9 +31,11 @@ repmis::LoadandCite(RPackages, file = "Packages.bib", install = FALSE)
 
 # Introduction:
 
-Topic
-Relevance
-Why is it interesting?
+Topic (federico)
+Relevance (pietro)
+Research questions (federico)
+Why are they interesting? (io)
+metodologia (federico)
 
-
+n.b.: include basic literature review
 ## References
