--- a/Reference2.bib
+++ b/Reference2.bib
@@ -2,12 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pietro Romozzi at 2014-10-09 18:22:49 +0200 
+%% Created for Pietro Romozzi at 2014-10-17 13:08:11 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Berry2009,
+	Author = {Helen Louise Berry and Kathryn Bowen and Tord Kjellstrom},
+	Date-Added = {2014-10-17 10:50:16 +0000},
+	Date-Modified = {2014-10-17 10:53:21 +0000},
+	Title = {Climate change and mental health: a causal pathways framework},
+	Year = {2009}}
+
+@misc{NotaIstat2012,
+	Author = {ISTAT},
+	Date-Added = {2014-10-17 10:40:00 +0000},
+	Date-Modified = {2014-10-17 10:41:34 +0000},
+	Keywords = {suicide and istat and data and report},
+	Month = {August},
+	Title = {I suicidi in Italia: Tendenze e confronti, come usare le statistiche},
+	Year = {2012}}
+
+@misc{PreventingSuicideWHO,
+	Author = {WHO},
+	Date-Added = {2014-10-16 16:54:32 +0000},
+	Date-Modified = {2014-10-16 16:57:10 +0000},
+	Keywords = {suicide and health and WHO},
+	Title = {Preventing suicide: a global imperative.},
+	Year = {2014}}
 
 @article{RecessionHO,
 	Author = {Suhrcke, M. & Stuckler, D.},
@@ -28,16 +52,13 @@
 	Title = {Health at a Glance 2013: OECD},
 	Url = {http://dx.doi.org/10.1787/health_glance-2013-en},
 	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1787/health_glance-2013-en}
+	Bdsk-Url-1 = {http://dx.doi.org/10.1787/health_glance-2013-en}}
 
 @article{Ataleofthree,
 	Author = {Kaplan, G.A.},
-	Date-Modified = {2014-16-09 12:58:18 +0000},
-	Keywords = {recession and health and outcome and empirical},
 	Journal = {Social Science & Medicine},
+	Keywords = {recession and health and outcome and empirical},
 	Number = {74},
 	Pages = {643 - 646},
 	Title = {Economic crisis: Some thoughts on why, when, and where they (might) matter for health - A tale of three countries},
-	Year = {2012}
-	
-	
+	Year = {2012}}
