--- a/Reference2.bib
+++ b/Reference2.bib
@@ -62,3 +62,21 @@
 	Pages = {643 - 646},
 	Title = {Economic crisis: Some thoughts on why, when, and where they (might) matter for health - A tale of three countries},
 	Year = {2012}}
+
+@article{heatwave,
+	Author = {Bouchama A., Dehbi M., Mohamed G., Matthies F., Shoukri M., Menne B.},
+	Journal = {Arch Intern Med.},
+	Keywords = {heatwave, heat, heat-related deaths},
+	Number = {20},
+	Pages = {2170-2176},
+	Title = {Prognostic factors in heat wave related deaths: a meta-analysis},
+	Year = {2007}}
+	
+@article{Seasonaldisorder,
+	Author = {A. Magnusson},
+	Journal = {Acta Psychiatria Scand.},
+	Keywords = {empidemiology, seasonal disorder, mental disorder, climate},
+	Number = {101},
+	Pages = {176-184},
+	Title = {An overview of epidemiological studies on seasonal affective disorder},
+	Year = {2007}}
