--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -31,31 +31,92 @@ repmis::LoadandCite(RPackages, file = "Packages.bib", install = FALSE)
 
 # Introduction:
 
-### Topic (federico)
+### Topic
+
+Several papers have tried to propose an explanatory framework to describe how climate conditions affect mental health. 
+Climate may affect individuals’ mental health both directly through extreme climate change, which exposes people to trauma, 
+or indirectly, as some climate’s characteristics may affect physical activity and mental health. Extreme temperature or 
+humidity rates have an influence on individuals’ physical health as it becomes more energy consuming to do physical activity, 
+to work or to travel, but also mental health could be negatively affected as climate erodes physical environments, which 
+subsequently damage social environments and thus, mental condition. 
+Health is defined by the World Health Organisation as a ‘state of complete physical, mental and social wellbeing and not 
+merely the absence of disease or infirmity’ (World health organisation, 1948). Mental health is one of the key components 
+that define general health and it can be seen as an alteration in thinking, mood, behaviour, and associated distress or impaired 
+functioning. Usually, problems related to mental condition can be considered to be either uncommon (schizophrenia, anxiety and 
+personal disorders) or common (depression, dementia, physiological distress).  The WHO showed that among almost 90% of people who 
+died by suicide in high-income countries at least one mental disorder was present, while those affected by more than one mental 
+disorder were experiencing significantly higher risks of committing suicide. 
+The relationship between mental health (and the related suicide rates) and climate still needs to be studied into details, 
+but some scholars identified extreme heat as a factor that is often associated with a general increase in aggressive, criminal 
+and suicide rates (@heatwave). Humidity has also been associated with mental functioning, especially with poorer concentration 
+and elevated fatigue. 
+Climate change is a phenomenon which is expected to have severe consequences on the mental health of millions of people too: 
+the threat to physical health or the potential loss of home, jobs and familiars due to catastrophic climate changes negatively 
+affects mental condition. 
+Sunlight is another factor, which has been documented to have direct effects on climate related health problems such as depressive 
+symptoms, anxiety disorders, and other mental problems usually peaking in the cold season when there is limited sunlight (@Seasonaldisorder).
+The debate about the impact of climate change on human health has only very recently included considerations of mental health. 
+Climate can have an influence on our psyche in a varieties of ways: it can directly inflict more and more natural disasters on 
+human settlements, which, as evidence suggests, increases anxiety-related or chronic severe mental problems; climate can also 
+increase the risk of physical injuries or health problems, which are correlated with mental health; finally, climate can endanger 
+the natural and social environment on which people depend for their wellbeing.
+
 
 ### Relevance
 
-According to the latest WHO report concerning suicide prevention [see the latest report by @PreventingSuicideWHO], "Globally, among young adults 15−29 years of age suicide accounts for 8.5% of all deaths and is ranked as the second leading cause of death (after traffic accidents). Among adults aged 30−49 years it accounts for 4.1% of all deaths and is ranked the fifth leading cause of death". This statement displays clearly the relevance of this issue, which is also greater considering that these estimation are often underrated because of the difficulties in recognizing sucide as a cause of death - will of committing suicide could be not recognized, families could prefer not to speak about it, and so on [see the note by @NotaIstat2012].
+According to the latest WHO report concerning suicide prevention [see the latest report by @PreventingSuicideWHO], "Globally, 
+among young adults 15−29 years of age suicide accounts for 8.5% of all deaths and is ranked as the second leading cause of 
+death (after traffic accidents). Among adults aged 30−49 years it accounts for 4.1% of all deaths and is ranked the fifth leading 
+cause of death". This statement displays clearly the relevance of this issue, which is also greater considering that these 
+estimation are often underrated because of the difficulties in recognizing sucide as a cause of death - will of committing 
+suicide could be not recognized, families could prefer not to speak about it, and so on [see the note by @NotaIstat2012].
+The above mentioned paper, moreover, is considered by several OECD countries as a strong stimulus to move further in suicide 
+prevention. Among these countries, we are going to focus on Italy, particularly at regional level. 
+Indeed, our convintion is that a focus on smaller than countries environments, does help in assessing how factors affecting 
+suicides impact differently within the same country, thus highlighting a possible variance among regions which is overlooked 
+by country-level aggregate data.
+In addition to this "micro-level" focus, we also intend to stress some environmental and climatic characteristics which could 
+contribute to create "suicide-genic" environment.
+Recognizing these characteristics will be helpful for setting efficient prevention strategies, and, especially considering the 
+regional focus, it will be more easy for policy makers to design policies tailored to the specific regional reality.
+Especially the climatic characteristic mentioned, according to recent literature, has turned to be correlated with mental health 
+and, trough it, with suicide. These are often not considered, as some auhors like @Berry2009 underline, therefore we believe that 
+including them in the present paper could deliver interesting results and perhaps stimulate further research in this branch.
 
-The above mentioned paper, moreover, is considered by several OECD countries as a strong stimulus to move further in suicide prevention. Among these countries, we are going to focus on Italy, particularly at regional level. 
+### Research question and methodology
 
-Indeed, our convintion is that a focus on smaller than countries environments, does help in assessing how factors affecting suicides impact differently within the same country, thus highlighting a possible variance among regions which is overlooked by country-level aggregate data.
+We want to test if the following hypothesis holds true: suicide rate in a certain Italian region increases when the average 
+temperature is low, when the number of solar radiation is low, when the urbanization rate is high, when precipitations happen 
+to be frequent, (when there is no sea), and when GDP per capita is high. The hypothesis we want to test originates from careful 
+reviewing of the relevant literature regarding mental disorders and climate change. The paper will focus on the relation between 
+suicidal behaviours (an extreme consequence of mental disorders) and various factors concerning climate.
 
-In addition to this "micro-level" focus, we also intend to stress some environmental and climatic characteristics which could contribute to create "suicide-genic" environment.
+The model we want to estimate will therefore be the following: 
 
-Recognizing these characteristics will be helpful for setting efficient prevention strategies, and, especially considering the regional focus, it will be more easy for policy makers to design policies tailored to the specific regional reality.
+Suicide rate = a + b1 * average temperature + b2 * solar radiation + b3* urbanization rate + b4* precipitations + 
++ b5* gini coefficient + b6 * GDP per capita + e
 
-Especially the climatic characteristic mentioned, according to recent literature, has turned to be correlated with mental health and, trough it, with suicide. These are often not considered, as some auhors like @Berry2009 underline, therefore we believe that including them in the present paper could deliver interesting results and perhaps stimulate further research in this branch.
+Where gini coefficient and GDP per capita are our control variables. 
 
-### Research questions (federico)
+Case studies: 
+
+We take into consideration five areas: North-West, North-East, Centre, South and Islands in Italy. The advantage of adopting 
+this categorization is that instead of twenty different case studies (there are twenty different regions in Italy) we will work 
+with only five. Also the Italian Statistical Agency adopts this categorization in various cases and some of the databases we are 
+going to use already include data divided according to this idea of clustering homogeneous Italian regions together. 
+
 
 ### Why are they interesting?
 
-One obvious reason why this work is potentially interesting is that mental disorders and suicide are nowadays often discussed both among insitution in health's field and media.
-
-Moreover, our focus on environmental and climati characteristics grounds on a recent body of studies which recognizes the link between these dimentions and mental disorders. These variables are going to be included in addition to more traditional variables (i.e. related to economic dimensions) to develop a wider model of analysys of mental disorders. As a consequence, the broad spectrum of this study makes the present work interesting and innovative.
-
-Another valuable point is the regional focus which allows to underscore, in the end, contingent specific characteristics of the territory rather than the whole country. Therefore, bringing the analysis at a smaller level, makes easier for policy makers to deal with these issues at a local and so more manageable level, as stated before.
+One obvious reason why this work is potentially interesting is that mental disorders and suicide are nowadays often discussed 
+both among insitution in health's field and media.
+Moreover, our focus on environmental and climati characteristics grounds on a recent body of studies which recognizes the link 
+between these dimentions and mental disorders. These variables are going to be included in addition to more traditional 
+variables (i.e. related to economic dimensions) to develop a wider model of analysys of mental disorders. As a consequence, 
+the broad spectrum of this study makes the present work interesting and innovative.
+Another valuable point is the regional focus which allows to underscore, in the end, contingent specific characteristics of 
+the territory rather than the whole country. Therefore, bringing the analysis at a smaller level, makes easier for policy makers 
+to deal with these issues at a local and so more manageable level, as stated before.
 
 ### Methodology (federico)
 
