--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -1,17 +1,17 @@
 ---
 title: "Second Assignment - Proposal"
 author: "Pietro Romozzi and Federico Colombo"
-date: "9 October 2014"
+date: "23 October 2014"
 output:
-  html_document:
+  pdf_document:
     fig_caption: yes
     number_sections: no
-  pdf_document:
+  html_document:
     fig_caption: yes
     number_sections: no
 bibliography:
 - Reference2.bib
-- Packages.bib
+- RPackages.bib
 ---
 
 ```{r include=FALSE}
@@ -23,11 +23,16 @@ RPackages <- c("ggplot2", "repmis")
 
 # Load PackagesUsed and create .bib BibTeX file
 # Note must have repmis package installed.
-repmis::LoadandCite(RPackages, file = "Packages.bib", install = FALSE)
+repmis::LoadandCite(RPackages, file = "RPackages.bib", install = FALSE)
 
 ```
 
+
 > Abstract:
+
+With the present work, the authors intend to create a descriptive model of economical, social and environmental characteristics of a territory, aiming to assess the impact of these factors on suicide rates. The model will be tested on Italian Regions, however if it turns to be robust, it could be tested also on other realities.
+
+
 
 # Introduction:
 
@@ -83,46 +88,56 @@ Especially the climatic characteristic mentioned, according to recent literature
 and, trough it, with suicide. These are often not considered, as some auhors like @Berry2009 underline, therefore we believe that 
 including them in the present paper could deliver interesting results and perhaps stimulate further research in this branch.
 
-### Research question and methodology
 
-We want to test if the following hypothesis holds true: suicide rate in a certain Italian region increases when the average 
-temperature is low, when the number of solar radiation is low, when the urbanization rate is high, when precipitations happen 
-to be frequent, (when there is no sea), and when GDP per capita is high. The hypothesis we want to test originates from careful 
-reviewing of the relevant literature regarding mental disorders and climate change. The paper will focus on the relation between 
-suicidal behaviours (an extreme consequence of mental disorders) and various factors concerning climate.
+### Research questions and methodology
+
+
+#### Research questions:
+
+We want to test if the following hypothesis holds true: 
+- Suicide rate in a certain Italian region increases when the average temperature is low.
+- Suicide rate increases when the number of solar radiation is low.
+- Suicide rate increases when the urbanization rate is high.
+- Suicide rate increases when precipitations happen to be frequent.
+- Suicide rate increases when GDP per capita is high. 
+
+The hypothesis we want to test originate from a careful review of the relevant literature regarding mental disorders and climate change. 
+The paper will focus on the relation between suicidal behaviours (an extreme consequence of mental disorders) and various factors concerning climate.
+
+
+#### The model:
 
 The model we want to estimate will therefore be the following: 
 
-Suicide rate = a + b1 * average temperature + b2 * solar radiation + b3* urban population + b4* precipitations + 
-b5* gini coefficient + b6 * GDP per capita + e
+Suicide rate = a + b1 x average temperature + b2 x solar radiation + b3 x urban population + b4 x precipitations + b5 x gini coefficient + b6 x GDP per capita + e
 
-Where gini coefficient and GDP per capita are our control variables. 
+"Gini coefficient" and "GDP per capita" are our control variables. 
 
-Variable suicide rate is defined by the WHO as the standardized number of deaths by suicide every 100.000 people occurred in a 
-certain country. 
-Since the focus of this paper is on intra-regional differences in Italy, data from the Italian National Institute of Statistics
-(ISTAT) will be used. Data regarding our five specific case studies are provided. 
 
-Variable solar radiation measures the level of solar irradiance in megajoul (MJ) per square meter. The Italian Air Force offers 
-a metereological service, which is responsible for the measurement of solar irradiance on the Italian territory. They also
-provide documentation gathered from various metereological units, unfortunately not for every single Italian region. (If measurement
-per region gets too complicated, we may decide to drop this variable).
+#### Considered variables, data gathering, software used:
 
-Variable Urban population measures of the degree of urbanization of a population. It describes the percentage of the total 
-population living in urban areas, as defined by the country. Also in this case, data provided by Istat will be used.
+Variable *suicide rate* is defined by the WHO as the standardized number of deaths by suicide every 100.000 people occurred in a certain country. 
+Since the focus of this paper is on intra-regional differences in Italy, data from the Italian National Institute of Statistics (ISTAT) will be used. Data regarding our five specific case studies are provided. 
 
-Regarding variable GDP per capita, we will use Eurostat's database, where it is possible to find data regarding GDP and 
+Variable *solar radiation* measures the level of solar irradiance in megajoul (MJ) per square meter. The Italian Air Force offers a metereological service, which is responsible for the measurement of solar irradiance on the Italian territory. They also provide documentation gathered from various metereological units, unfortunately not for every single Italian region.
+Because of that, if regional measurement appears to be too complex for the scope of this work, we might decide not to use this variable or not to consider some regions.
+
+Variable *urban population* measures of the degree of urbanization of a population. It describes the percentage of the total population living in urban areas, as defined by the country. Also in this case, data provided by Istat will be used.
+
+Regarding variable *GDP per capita*, we will use Eurostat's database, where it is possible to find data regarding GDP and 
 GDP per capita for every single region in the European Union. Database is easy to access and to use.
 
-Case studies: 
-
-We take into consideration five areas: North-West, North-East, Centre, South and Islands in Italy. The advantage of adopting 
-this categorization is that instead of twenty different case studies (there are twenty different regions in Italy) we will work 
-with only five. Also the Italian Statistical Agency and Eurostat use this categorization for simplicity and some of the databases 
-we are going to use already include data divided according to this idea of clustering homogeneous Italian regions together. 
+All the data gathered will be processed using "R" [see @CiteR]. We use as well some packages developed for R, namely "ggplot2" [see @R-ggplot2] and "repmis" [see @R-repmis].
 
 
-### Why are they interesting?
+#### Cases studied:
+
+We take into consideration five areas: North-West, North-East, Centre, South and Islands in Italy. 
+The advantage of adopting this categorization is that instead of twenty different case studies (there are twenty different regions in Italy), among which some could be really similar because they are located in the same macro area, we will work with only five. 
+Also the Italian Statistical Agency and Eurostat use this categorization for simplicity and some of the databases we are going to use already include data divided according to this idea of clustering homogeneous Italian regions together. 
+
+
+### What does it make this work interesting?
 
 One obvious reason why this work is potentially interesting is that mental disorders and suicide are nowadays often discussed 
 both among insitution in health's field and media.
@@ -134,6 +149,5 @@ Another valuable point is the regional focus which allows to underscore, in the 
 the territory rather than the whole country. Therefore, bringing the analysis at a smaller level, makes easier for policy makers 
 to deal with these issues at a local and so more manageable level, as stated before.
 
-n.b.: include basic literature review
 
 ## References:
