final edit to 2nd assignment
Problem about knitting to PDF fixed (thanks prof. Gandrud).
Now the directory contains updated R file, html file and PDF file with
the final version of our 2nd assignment.
Packages.bib has been deleted since there is a file called RPAckages in
the wd, containing the same information; the latter has been kept and
used for the references to R packages.

--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -5,7 +5,6 @@ date: "23 October 2014"
 output:
   pdf_document:
     fig_caption: yes
-    number_sections: no
   html_document:
     fig_caption: yes
     number_sections: no
@@ -16,7 +15,7 @@ bibliography:
 
 ```{r include=FALSE}
 # Set working directory.
-setwd("~/Desktop/SecondAssignment-master/")
+setwd("~/Desktop/Hertie/1st Semester/Collaborative Social Science Data Analysis/SecondAssignment/")
 
 # Load packages and create BibTeX file
 RPackages <- c("ggplot2", "repmis")
